--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,24 @@ body {
     background-color: #fff;
     color: #4a4a4f;
   }
+
+h1 {
+  text-align: center;
+}
+
+.card {
+    float: left;
+    width: 30%;
+    margin-left: 15%;
+    max-width: 260px;
+    min-width: 150px;
+}
+
+.card a {
+    text-align: center;
+}
+
+img {
+    width: 100%;
+    height: 180px;
+}
